style.css
body {
    margin: 0;
    background-color: #111;
    color: white;
    font-family: 'Courier New', monospace;
    text-align: center;
}

main {
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 30px;
}

.container {
    padding: 10px 20px;
    border: 1px solid #444;
    border-radius: 8px;
    max-width: 800px;
}

h1, h2 {
    font-weight: 600;
}

.container p {
    font-size: 1.5rem;
    line-height: 1.6;
    margin-bottom: 30px;
}

.container li {
    font-size: 1.3rem;
    line-height: 1.6;
    margin-bottom: 10px;
}

a {
    display: inline-block;
    color: #4eaaff;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

.image-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.image-wrapper img {
    width: clamp(200px, 30%, 400px);
    margin-bottom: 8px;
}

@media (max-width: 600px) {
    .image-wrapper img {
        max-width: 80%;
    }

    .container p {
        font-size: 1.2rem;
    }
}

.image-caption {
    font-size: 0.8rem;
    color: #ccc;
}

